# COMPASS

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  INSTALL.rst  README.rst  api.html  build.rs  ci.yml  development.md  genindex.html  glossary.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  readme.md  run.sh  search.html  searchindex.js  tox.ini
.github/: copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation_improvement.yaml  feature_request.yaml  installation_issue.yaml
.github/workflows/: ci-python.yml  ci-rust.yml  ci.yml  codecov.yml  codeql.yml  docker-publish.yml  docs.yml  lint-python.yml  publish_to_pypi.yml  release-cli.yml  update_pixi_lock.yaml
_autosummary/: compass.common.base.BaseTextExtractor.html  compass.common.base.empty_output.html  compass.common.base.found_ord.html  compass.common.base.html  compass.common.base.llm_response_does_not_start_with_no.html  compass.common.base.llm_response_starts_with_no.html  compass.common.base.llm_response_starts_with_yes.html  compass.common.base.run_async_tree.html  compass.common.base.run_async_tree_with_bm.html  compass.common.base.setup_async_decision_tree.html  compass.common.base.setup_base_setback_graph.html  compass.common.base.setup_graph_extra_restriction.html  compass.common.base.setup_graph_no_nodes.html  compass.common.base.setup_graph_permitted_use_districts.html  compass.common.base.setup_participating_owner.html  compass.common.html  compass.common.tree.AsyncDecisionTree.html  compass.common.tree.html  compass.exceptions.COMPASSError.html  compass.exceptions.COMPASSNotInitializedError.html  compass.exceptions.COMPASSRuntimeError.html  compass.exceptions.COMPASSValueError.html  compass.exceptions.html  compass.extraction.apply.check_for_ordinance_info.html  compass.extraction.apply.extract_date.html  compass.extraction.apply.extract_ordinance_text_with_llm.html  compass.extraction.apply.extract_ordinance_text_with_ngram_validation.html  compass.extraction.apply.extract_ordinance_values.html  compass.extraction.apply.html  compass.extraction.common.BaseTextExtractor.html  compass.extraction.common.empty_output.html  compass.extraction.common.found_ord.html  compass.extraction.common.html  compass.extraction.common.llm_response_does_not_start_with_no.html  compass.extraction.common.llm_response_starts_with_no.html  compass.extraction.common.llm_response_starts_with_yes.html  compass.extraction.common.run_async_tree.html  compass.extraction.common.run_async_tree_with_bm.html  compass.extraction.common.setup_async_decision_tree.html  compass.extraction.common.setup_base_graph.html  (+224 more)
_cli/: cli.html  compass process.html  compass.html
_modules/: index.html
_modules/compass/: exceptions.html  warn.html
_sources/: index.rst.txt
_sources/_autosummary/: compass.common.base.found_ord.rst.txt  compass.common.base.rst.txt  compass.common.tree.AsyncDecisionTree.rst.txt  compass.exceptions.rst.txt  compass.extraction.apply.rst.txt  compass.extraction.common.BaseTextExtractor.rst.txt  compass.extraction.common.empty_output.rst.txt  compass.extraction.common.found_ord.rst.txt  compass.extraction.common.llm_response_does_not_start_with_no.rst.txt  compass.extraction.common.llm_response_starts_with_no.rst.txt  compass.extraction.common.llm_response_starts_with_yes.rst.txt  compass.extraction.common.rst.txt  compass.extraction.common.run_async_tree.rst.txt  compass.extraction.common.run_async_tree_with_bm.rst.txt  compass.extraction.common.setup_async_decision_tree.rst.txt  compass.extraction.common.setup_base_graph.rst.txt  compass.extraction.common.setup_base_setback_graph.rst.txt  compass.extraction.common.setup_graph_extra_restriction.rst.txt  compass.extraction.common.setup_graph_no_nodes.rst.txt  compass.extraction.common.setup_graph_permitted_use_districts.rst.txt  compass.extraction.common.setup_participating_owner.rst.txt  compass.extraction.ngrams.convert_text_to_sentence_ngrams.rst.txt  compass.extraction.ngrams.rst.txt  compass.extraction.ngrams.sentence_ngram_containment.rst.txt  compass.extraction.rst.txt  compass.extraction.solar.ordinance.SolarOrdinanceTextCollector.rst.txt  compass.extraction.solar.ordinance.SolarPermittedUseDistrictsTextCollector.rst.txt  compass.extraction.tree.AsyncDecisionTree.rst.txt  compass.extraction.tree.rst.txt  compass.extraction.wind.graphs.rst.txt  compass.extraction.wind.graphs.setup_conditional.rst.txt  compass.extraction.wind.ordinance.WindOrdinanceTextCollector.rst.txt  compass.extraction.wind.ordinance.WindPermittedUseDistrictsTextCollector.rst.txt  compass.llm.calling.LLMCallerArgs.rst.txt  compass.llm.calling.rst.txt  compass.llm.rst.txt  compass.rst.txt  compass.scripts.download.download_county_ordinance.rst.txt  compass.scripts.download.download_jurisdiction_ordinance.rst.txt  compass.scripts.download.rst.txt  (+49 more)
_sources/_cli/: compass process.rst.txt  compass.rst.txt
_sources/dev/: README.rst.txt
_sources/val/: validation.rst.txt
_static/: documentation_options.js
bundle/elm/: setup.py
compass/: __init__.py  _cli.py  cli.py  download.py  exceptions.py  pb.py  process.py  warn.py
compass/_cli/: main.py
compass/common/: __init__.py  base.py  tree.py
compass/data/: conus_jurisdictions.csv
compass/extraction/: apply.py  common.py  date.py  features.py  graphs.py  tree.py
compass/llm/: __init__.py  calling.py  config.py
compass/scripts/: download.py  process.py
compass/services/: base.py  cpu.py  openai.py  provider.py  usage.py  (+1 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
dev/: README.html  index.html
docs/: Makefile
examples/: README.md  index.html
misc/: INSTALL.html  installation.html
python/: .gitignore
scraper/: __init__.py  cli.py  download.py  exceptions.py  process.py
support/: compile_jurisdiction_gpkg.ipynb  compute_validation_metrics.ipynb  load_jurisdictions.py  update_jurisdictions.py  val_utils.py
tools/: generate_troubleshooting_index.py
val/: validation.html
(+222 files in other folders)
