[workspace]
members = [ "crates/cli","crates/compass"]
default-members = ["crates/compass"]
resolver = "2"

[workspace.package]
version = "0.0.4"
authors = [
  "Guilherme Castelão <gpimenta@nrel.gov>",
  "Paul Pinchuk <Pavlo.Pinchuk@nrel.gov>",
  ]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
clap = { version = "4.5.21" }
csv = { version = "1.3.1" }
duckdb = { version = "1.1.1", features = ["bundled"] }
nrel-compass-db = { version = ">=0.0.3", path = "crates/compass" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
tempfile = { version = "3.14.0" }
thiserror = { version = "2.0.3" }
tokio = { version = "1.42.0", features = ["fs", "io-util", "rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"]}
tracing-appender = "0.2"
