[workspace]
members = ["crates/cli", "crates/compass"]
default-members = ["crates/compass"]
resolver = "2"

[workspace.package]
version = "0.0.8"
authors = [
  "Guilherme Castelão <gpimenta@nrel.gov>",
  "Paul Pinchuk <Pavlo.Pinchuk@nrel.gov>",
  ]
edition = "2024"
license = "BSD-3-Clause"
rust-version = "1.87.0"
repository = "https://github.com/NREL/COMPASS"
categories = ["data-structures", "science"]
keywords = ["NLR", "database", "energy", "ordinance"]

[workspace.dependencies]
infra-compass-db = { version = "0.0.8", path = "crates/compass" }
anyhow = { version = "1.0.98" }
clap = { version = "4.5.40", features = ["cargo"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
csv = { version = "1.3.1" }
duckdb = { version = "1.4.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
sha2 = { version = "0.10.8" }
tempfile = { version = "3.21.0" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.47.0", features = ["fs", "io-util", "rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"]}
tracing-appender = "0.2.3"
