[package]
name = "nrel-ordinance-cli"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["cargo"] }
ordinance = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
