[package]
name = "infra-compass-cli"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
duckdb = { workspace = true }
infra-compass-db = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
